--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     </header>
 
     <main class="main">
-      <section class="info">
-        <div class="info__inner container">
+      <section class="info container">
+        <div class="info__inner">
           <h1 class="info__title">
             EdFeedback — платформа збору думок про дистанційне навчання
           </h1>
